static/style.css
/*
--------------------------------------------------
Variables
--------------------------------------------------
*/
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  /* Colors */
  --bg-color: rgba(233, 241, 244);
  --sidebar-color: rgba(241, 246, 249);
  --proof-color: rgba(0, 0, 0, 0);
  --drop-zone-height: clamp(0.1rem, 2vh, 0.5rem);
  --formula-left-margin: 0.5rem;
  /* Text sizes */
  --sidebar-heading-text-size: clamp(1rem, 1vw + 0.75rem, 1.125rem);
  --sidebar-content-text-size: smaller;
  --error-text-size: calc(var(--normal-text-size) - 0.5rem);
  --normal-text-size: clamp(1.125rem, 2vw + 0.75rem, 1.5rem);
  --header-text-size: clamp(1.5rem, 2.5vw + 1rem, 2.25rem);
  --header-height: calc(var(--header-text-size) + 2vh);
  --subproof-border: 0.2rem solid rgba(193, 201, 204);
  --subproof-border-expanded: 0.3rem solid rgba(193, 201, 204);
  --font-ui: "Fira Sans", system-ui, -apple-system, sans-serif;
  --font-math: "Fira Sans", monospace;
}

body {
  display: flex;
  margin: 0;
  font-family: var(--font-ui);
  overflow: clip;
}

input:focus {
  outline: none;
}

h1 {
  margin-block: 0.67em;
  font-size: var(--header-text-size);
}

/*
--------------------------------------------------
Button containers
--------------------------------------------------
*/

.sidebar {
  background-color: var(--sidebar-color);
  border-right: 1px solid #e0e0e0;
  z-index: 110;
  height: calc(100dvh - var(--header-height));
  overflow: auto;
  scrollbar-width: none;
}

.sidebar-content {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;

  padding: 2vh 0 2vh 0;
  gap: 2vh;

  background-color: var(--sidebar-color);
  font-family: inherit;
  font-size: var(--sidebar-heading-text-size);
  border-right: 1px solid #e0e0e0;
}

.sidebar-closed {
  width: 0;
  transition: width 0.2s linear;
}

.sidebar-open {
  width: 15vw;
  transition: width 0.2s linear;
}

@media only screen and (max-width: 1200px) {
  .sidebar {
    position: absolute;
  }

  .sidebar-open {
    width: 60vw;
  }

  .sidebar-content {
    width: 100%;
  }
}

.sidebar-element {
  background-color: #ffffff;
  border: 1px solid #dadce0;
  border-radius: 8px;
  margin: 0px 16px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.03);
}

details > summary {
  list-style: none;
  cursor: pointer;
  user-select: none;
}

details > summary > .summary-arrow {
  transition: 0.3s;
}

::details-content {
  transition:
    height 0.5s ease,
    content-visibility 0.5s ease allow-discrete;
  height: 0;
  overflow: clip;
}

[open]::details-content {
  height: auto;
}

/* allow-keywords if supported, this makes <details> animted. Not supported in firefox and safari! */
@supports (interpolate-size: allow-keywords) {
  :root {
    interpolate-size: allow-keywords;
  }
}

details[open] > summary > .summary-arrow {
  transform: rotate(180deg);
}

details > summary::-webkit-details-marker {
  display: none;
}

ul {
  list-style-position: inside;
}

.sidebar-header {
  font-family: inherit;
  font-size: var(--sidebar-heading-text-size);
  font-weight: 500;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5vh 0.5vw;
}

.row-sidebar-content {
  width: 100%;
  padding: 0.5vh 0.5vw;
  gap: 0.5vh;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  font-size: var(--sidebar-content-text-size);
}

.column-sidebar-content {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0.5vh 0.5vw;
  gap: 0.5vh;
  font-size: var(--sidebar-content-text-size);
}

.symbol-button {
  width: 2em;
}

.icon-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-wrap: wrap;
  text-align: center;
}

.example-container {
  display: flex;
  justify-content: center;
}

.example-button {
  width: 100%;
  display: flex !important;
  justify-self: left;
}

.math-content {
  font-family: var(--font-math);
}

.icon-text {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 0.5vw;
}

.bin {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 6vw;
  cursor: help;
  border: 1px solid;
  border-radius: 6px;
  color: #24292e;
  border-color: #1b1f2326;
  box-shadow:
    rgba(27, 31, 35, 0.04) 0px 1px 0px 0px,
    rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
}

.spawn-button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 6vw;
  border: 1px solid;
  border-radius: 6px;
  color: #24292e;
  border-color: #1b1f2326;
  box-shadow:
    rgba(27, 31, 35, 0.04) 0px 1px 0px 0px,
    rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
}

/*
--------------------------------------------------
Line number containers
--------------------------------------------------
*/
.line-no-container {
  display: flex;
  flex-direction: column;
  width: 5%;
}

.empty-line-no {
  height: 2px;
  margin: 0px;
  margin-bottom: 2px;
}

/*
--------------------------------------------------
Proof containers
--------------------------------------------------
*/

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  border-bottom: 1px solid #e0e0e0;
  font-size: var(--header-text-size);
  padding: 1vh;
  height: var(--header-height);
}

.proof-actions-header {
  display: flex;
  flex-direction: row;
  gap: 1vw;
  font-size: var(--error-text-size);
}

.header > h1 {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.header > h1 > img {
  height: var(--header-text-size);
  margin-right: 0.5vw;
}

.help-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: none;
  border-radius: 100%;
  background: transparent;
  cursor: pointer;
  margin-left: 1vw;
}

.help-button > span {
  font-size: var(--header-text-size);
  height: var(--header-text-size);
  width: var(--header-text-size);
}

.help-button:hover {
  background-color: #f3f4f6;
}

.help-button:active {
  transform: scale(0.92);
}

.app-button {
  display: inline-block;
  outline: 0;
  cursor: pointer;
  padding: 0.5vh 0.5vw;
  font-size: var(--error-text-size);
  font-weight: 500;
  line-height: 20px;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 6px;
  color: #24292e;
  background-color: #fafbfc;
  border-color: #1b1f2326;
  box-shadow:
    rgba(27, 31, 35, 0.04) 0px 1px 0px 0px,
    rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
  transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
  transition-property: color, background-color, border-color;
  text-decoration: none;
}

.app-button:hover {
  background-color: #f3f4f6;
  border-color: #1b1f2326;
  transition-duration: 0.1s;
}

.app-container {
  display: flex;
  flex: 1;
  flex-direction: column;
  background-color: var(--bg-color);
  font-size: var(--normal-text-size);
}

.content-container {
  display: inline-flex;
  width: 100%;
  height: 100%;
}

.proof-container-border {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: calc(100dvh - var(--header-height));
  overflow: auto;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.proof-container {
  margin-top: 1vh;
  margin-bottom: 1vh;
  padding: 1vh;
  background-color: #ffffff;
  border-radius: 0.5vw;
  display: flex;
  flex-direction: row;
  width: 95%;
  height: fit-content;
  overflow-y: auto;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.formula-container {
  height: fit-content;
  background-color: var(--proof-color);
  width: calc(100% - var(--formula-left-margin));
  anchor-scope: --error-anchor;
  margin-left: var(--formula-left-margin);
}

.formula-container:hover {
  background-color: var(--bg-color);
  transition: 0.1s linear;
}

.line-no {
  padding: 0;
  margin: 0;
  height: fit-content;
  font-size: var(--normal-text-size);
  font-family: var(--font-math);
}

.formula-input {
  border: none;
  width: 100%;
  padding-left: 0.3vw;
  background-color: var(--proof-color);
  margin: 0;
  font-size: var(--normal-text-size);
  /* font-family: inherit; */
  font-family: var(--font-math);
  z-index: 110;
  anchor-name: --error-anchor;
}

.formulae-container {
  box-sizing: border-box;
  width: 70%;
}

.tooltip {
  position: absolute;
  position-area: bottom;
  position-anchor: --error-anchor;
  border: 1px solid;
  border-radius: 2px;
  width: fit-content;
  padding: 0.5vh 0.5vw;
  white-space: pre;
  background: #fff;
  color: #000;
  font-size: var(--error-text-size);
}

.anchor-container {
  anchor-scope: --anchor;
}

.anchored {
  position-area: right;
  position-anchor: --anchor;
}

.anchor {
  anchor-name: --anchor;
}

.rulebox-container {
  width: 4rem;
}

.rule-button {
  font-size: var(--sidebar-content-text-size);
  font-family: var(--font-math);
  width: 100%;
  letter-spacing: 0.1em;
}

.symbol-button {
  width: 2rem;
}

.empty-assumptions {
  height: 2px;
  margin: 0px;
}

.subproof {
  position: relative;
  width: calc(100% - var(--formula-left-margin));
  border-left: var(--subproof-border);
  margin-left: var(--formula-left-margin);
}

/*.subproof
  > .subproof:not(
    :has(
      .subproof:hover,
      .formula-container:hover,
      .rule-container:hover,
      .drop-zone:not(.last-assumption):hover
    )
  ):hover {
  background-color: var(--bg-color);
  transition: 0.1s linear;
}*/

.last-assumption {
  border-bottom: var(--subproof-border);
  margin-left: 0 !important;
  margin-bottom: 5px;
}

.empty-last-assumption {
  padding-bottom: 7px;
}

.proof-view {
  display: grid;
}

.has-error {
  color: rgb(255, 0, 0);
}

/*
--------------------------------------------------
Rule containers
--------------------------------------------------
*/
.empty-rule {
  padding: 0;
  margin: 0;
  font-family: var(--font-math);
  font-size: var(--normal-text-size);
  height: fit-content;
}

.empty-assumption-rule {
  padding: 0;
  margin: 0;
  height: 2px;
}

.rule-input {
  border: none;
  width: 100%;
  padding: 0;
  margin: 0;
  font-family: var(--font-math);
  font-size: var(--normal-text-size);
  background-color: var(--proof-color);
  anchor-name: --error-anchor;
}

.rule-container {
  width: 100%;
  padding: 0;
  margin: 0;
  height: fit-content;
  position: relative;
  background-color: var(--proof-color);
  anchor-scope: --error-anchor;
  cursor: pointer;
}

.rule-container:hover {
  background-color: var(--bg-color);
  transition: 0.1s linear;
}

.rules-container {
  width: 25%;
}

/*
--------------------------------------------------
Drag and drop related
--------------------------------------------------
*/
.draggable {
  cursor: move !important;
  /* fallback if grab cursor is unsupported */
  cursor: grab !important;
  cursor: -webkit-grab !important;
}

.drag-target {
  background-color: var(--bg-color);
}

.drop-zone {
  height: var(--drop-zone-height);
  transition: height 0.1s linear;
  background-color: var(--proof-background-color);
  cursor: default;
  width: calc(100% - var(--formula-left-margin));
  margin-left: var(--formula-left-margin);
}

.expanded-drop-zone {
  height: var(--normal-text-size);
}

.material-symbols-outlined {
  font-variation-settings:
    "FILL" 0,
    "wght" 400,
    "GRAD" 0,
    "opsz" 24;
}

